@@ -1,5 +1,6 @@
 2021-10-21  Matteo Corti  <matteo@corti.li>
 
+        * test/unit_tests.sh (testRSA): Added a test for RSA ciphers
         * check_ssl_cert (main): Fixes --rsa on systems not supporting PSS
         * check_ssl_cert (create_temporary_file): Uses mktemp if available (the workaround is only used if not available for speed reasons)
 
